force-app/main/default/objects/Mercado__c/fields/CotacaoAtualMercado__c.field-meta.xml
<CustomField>
    <fullName>CotacaoAtualMercado__c</fullName>
    <label>Cotação Atual</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>