force-app/main/default/objects/Mercado__c/fields/MoedaPrimaria__c.field-meta.xml
<CustomField>
    <fullName>MoedaPrimaria__c</fullName>
    <description>Ativo primário, aquele que é comprado nas operações deste mercado.</description>
    <formula>LEFT(Name, FIND(&quot;/&quot;, Name)-1)</formula>
    <inlineHelpText>Ativo primário, aquele que é comprado nas operações deste mercado.</inlineHelpText>
    <label>Moeda  Primária</label>
    <type>Text</type>
</CustomField>