force-app/main/default/objects/Mercado__c/fields/MoedaSecundaria__c.field-meta.xml
<CustomField>
    <fullName>MoedaSecundaria__c</fullName>
    <description>Moeda Secundária é o ativo ao qual se vende neste Mercado.</description>
    <formula>RIGHT(Name , LEN(Name) - FIND(&quot;/&quot;, Name))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Moeda Secundária é o ativo ao qual se vende neste Mercado.</inlineHelpText>
    <label>Moeda Secundária</label>
    <type>Text</type>
</CustomField>