force-app/main/default/objects/Mercado__c/fields/Quantidade__c.field-meta.xml
<CustomField>
    <fullName>Quantidade__c</fullName>
    <description>Quantidade de ativo que foi comprada.</description>
    <inlineHelpText>Quantidade de ativo que foi comprada.</inlineHelpText>
    <label>Quantidade</label>
    <summarizedField>Ordem__c.QuantidadeP__c</summarizedField>
    <summaryForeignKey>Ordem__c.Mercado__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>