force-app/main/default/objects/Mercado__c/fields/Saldo__c.field-meta.xml
<CustomField>
    <fullName>Saldo__c</fullName>
    <formula>TotalInvestido__c - ( TotalComprado__c -  TotalVendido__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saldo</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>