force-app/main/default/objects/Mercado__c/fields/TotalInvestido__c.field-meta.xml
<CustomField>
    <fullName>TotalInvestido__c</fullName>
    <formula>CotacaoAtualMercado__c * Quantidade__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Investido</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>